--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,7 +28,7 @@
         <div class="navbar-center hidden lg:flex">
             <ul class="menu menu-horizontal px-1">
                 <li>
-                    <a>
+                    <a href="/books">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor" class="size-6">
                             <path stroke-linecap="round" stroke-linejoin="round"
@@ -38,7 +38,7 @@
                     </a>
                 </li>
                 <li>
-                    <a>
+                    <a href="/authors">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor" class="size-6">
                             <path stroke-linecap="round" stroke-linejoin="round"
@@ -48,7 +48,7 @@
                     </a>
                 </li>
                 <li>
-                    <a>
+                    <a href="/categories">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor" class="size-6">
                             <path stroke-linecap="round" stroke-linejoin="round"
@@ -67,11 +67,10 @@
     <div class="container mx-auto px-4 py-10">
         <div class="card bg-base-100 shadow-xl">
             <div class="card-body">
-                <h1 class="text-3xl font-bold text-primary">Bienvenue sur My Library</h1>
-                <p class="py-4">Ceci est la page index</p>
+                {% block content %} {% endblock %}
             </div>
         </div>
-        {% block content %}{% endblock %}
+
     </div>
 
 </body>
